--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
   <div class="container-fluid"> 
       <div class="row bg-light" >
-          <div class="col-2 ml-5">   
-              <img src="/images/Maize-logo.png" alt="maze logo" width="150px">
+          <div class="col-2 logo ml-5">   
+              <img src="https://cdn.shopify.com/s/files/1/0113/2272/files/MAiZE_Logo.png?height=628&pad_color=ffffff&v=1607374028&width=1200" alt="maze logo" width="150px">
           </div>
-          <div class="col-7"></div>
-          <div class="col-2 text-center">
+          <div class="col-6"></div>
+          <div class="col-lg-3 col-sm-12 hours text-center">
               <h3>Hours</h3>
               <h5>Sun-Th: 3pm to 9pm</h5>
               <h5>Fri-Sat: 3pm to 11pm</h5>
@@ -92,28 +92,28 @@
 <!-- Attractions -->   
     <div class="row attractionCardWrapper bg-light" id="attract">
       
-      <div class="col-lg-3 col-med-6 col-sm-12 attractionCard">
+      <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
         <img src="/images/image.jpeg" alt="pumpkin patch" class="img-thumbnail">
         <h4>PUMPKIN PATCH</h4>
         <p>Find the perfect one. </p>
         <p>$.0.50/lb</p>
       </div>
 
-      <div class="col-lg-3 col-med-6 col-sm-12 attractionCard">
+      <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
         <img src="/images/860_Main_Zombies_1-800x428.png" alt="zombies" class="img-thumbnail">
         <h4>ZOMBIE PAINTBALL</h4>
         <p>Shoot as many zombies as you can</p>
         <p>$5.00/game</p>
       </div>
 
-      <div class="col-lg-3 col-med-6 col-sm-12 attractionCard">
+      <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
         <img src="/images/hayride-It-2-800x600.jpeg" alt="hayride" class="img-thumbnail">
         <h4>HAUNTED HAYRIDES</h4>
         <p>Special characters will greet you!</p>
         <p>$5.00/ride</p>
       </div>
 
-      <div class="col-lg-3 col-med-6 col-sm-12 attractionCard">
+      <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
         <img src="/images/download.jpeg" alt="s'mores" class="img-thumbnail">
         <h4>FREE S'MORES</h4>
         <p>Gather around the firepit</p>
@@ -141,12 +141,12 @@
       </div>
       <div class="carousel-item">
         <img class="d-block  testimonial-image" src="/images/photo-1463453091185-61582044d556.jpeg" alt="Second slide">
-        <h3 class="testimonial-text">"I was soooooo scared. I can't sleep with the lights out anymore."</h3>
+        <h3 class="testimonial-text">"I was soooooo scared. Exciting, thrilling, screamed so much that I lost my voice. I'll be back soon."</h3>
         <div class="stars mt-3">
           <span class="fas fa-star checked"></span>
-          <span class="fas fa-star"></span>
-          <span class="fas fa-star"></span>
-          <span class="fas fa-star"></span>
+          <span class="fas fa-star checked"></span>
+          <span class="fas fa-star checked"></span>
+          <span class="fas fa-star checked"></span>
           <span class="fas fa-star"></span>
         </div>
         <h5 class="name">John, Las Vegas, NV</h5>
@@ -227,16 +227,19 @@
   </div>
   
   <!-- Footer -->
-
-  <footer class="text-center mt-5">
-   
-    <a href="#" class="fa fa-2x fa-facebook"></a>
-    <a href="#" class="fa fa-2x fa-twitter p-4"></a>  
-    <a href="#" class="fa fa-2x fa-instagram"></a>
-    <a href="#" class="fa fa-2x fa-youtube p-4"></a>
+  <footer class="text-center mt-0">
+    <div class="row justify-content-center">
+        <a class="btn2 btn-lg btn-light bg-dark text-light mt-3" href="git@github.com:csteid/event-landing-page.git" role="button">Free tickets to The Garden</a>
+      </div>
+      <div class="foot">
+        <a href="#" class="fa fa-2x fa-facebook"></a>
+        <a href="#" class="fa fa-2x fa-twitter p-4"></a>  
+        <a href="#" class="fa fa-2x fa-instagram"></a>
+        <a href="#" class="fa fa-2x fa-youtube p-4"></a>
+      </div>
   
-        <p>Colleen Steidley csteid12@gmail.com</p>
-    <p>&copy; 2021</p>
+        <p>Colleen S. csteid12@gmail.com</p>
+        <p>&copy; 2021</p>
 
   </footer>
   </div>
