add image attractions

--- a/index.html
+++ b/index.html
@@ -93,28 +93,28 @@
     <div class="row attractionCardWrapper bg-light" id="attract">
       
       <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
-        <img src="/images/image.jpeg" alt="pumpkin patch" class="img-thumbnail">
+        <img src="images/image.jpeg" alt="pumpkin patch" class="img-thumbnail">
         <h4>PUMPKIN PATCH</h4>
         <p>Find the perfect one. </p>
         <p>$.0.50/lb</p>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
-        <img src="/images/860_Main_Zombies_1-800x428.png" alt="zombies" class="img-thumbnail">
+        <img src="images/860_Main_Zombies_1-800x428.png" alt="zombies" class="img-thumbnail">
         <h4>ZOMBIE PAINTBALL</h4>
         <p>Shoot as many zombies as you can</p>
         <p>$5.00/game</p>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
-        <img src="/images/hayride-It-2-800x600.jpeg" alt="hayride" class="img-thumbnail">
+        <img src="images/hayride-It-2-800x600.jpeg" alt="hayride" class="img-thumbnail">
         <h4>HAUNTED HAYRIDES</h4>
         <p>Special characters will greet you!</p>
         <p>$5.00/ride</p>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12 attractionCard">
-        <img src="/images/download.jpeg" alt="s'mores" class="img-thumbnail">
+        <img src="images/download.jpeg" alt="s'mores" class="img-thumbnail">
         <h4>FREE S'MORES</h4>
         <p>Gather around the firepit</p>
         <p>6-9pm</p>
