--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block testimonial-image" src="/images/photo-1515621061946-eff1c2a352bd.jpeg" alt="First slide">
+        <img class="d-block testimonial-image" src="images/photo-1515621061946-eff1c2a352bd.jpeg" alt="First slide">
         <h3 class="testimonial-text">"Fun family event. We will definitely be back."</h3>
         <div class="stars mt-3">
             <span class="fas fa-star checked"></span>
@@ -140,7 +140,7 @@
         <h5 class="name">Lori, Merced, CA</h5>
       </div>
       <div class="carousel-item">
-        <img class="d-block  testimonial-image" src="/images/photo-1463453091185-61582044d556.jpeg" alt="Second slide">
+        <img class="d-block  testimonial-image" src="images/photo-1463453091185-61582044d556.jpeg" alt="Second slide">
         <h3 class="testimonial-text">"I was soooooo scared. Exciting, thrilling, screamed so much that I lost my voice. I'll be back soon."</h3>
         <div class="stars mt-3">
           <span class="fas fa-star checked"></span>
@@ -152,7 +152,7 @@
         <h5 class="name">John, Las Vegas, NV</h5>
       </div>
       <div class="carousel-item">
-        <img class="d-block  testimonial-image" src="/images/MMH.jpeg" alt="Third slide">
+        <img class="d-block  testimonial-image" src="images/MMH.jpeg" alt="Third slide">
         <h3 class="testimonial-text">"Best night of my life!! I hope to see everyone here next year...maybe everyone??..."</h3>
         <div class="stars mt-3">
           <span class="fas fa-star checked"></span>
