added jumbotron cornfield

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   <!-- Footer -->
   <footer class="text-center mt-0">
     <div class="row justify-content-center">
-        <a class="btn2 btn-lg btn-light bg-dark text-light mt-3" href="git@github.com:csteid/event-landing-page.git" role="button">Free tickets to The Garden</a>
+        <a class="btn2 btn-lg btn-light bg-dark text-light mt-3" href="https://csteid.github.io/event-landing-page/" role="button">Free tickets to The Garden</a>
       </div>
       <div class="foot">
         <a href="#" class="fa fa-2x fa-facebook"></a>
