added new button for garden

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <div class="container-fluid"> 
       <div class="row bg-light" >
-          <div class="col-2 logo ml-5">   
+          <div class="col-2 logo mx-auto">   
               <img src="https://cdn.shopify.com/s/files/1/0113/2272/files/MAiZE_Logo.png?height=628&pad_color=ffffff&v=1607374028&width=1200" alt="maze logo" width="150px">
           </div>
           <div class="col-6"></div>
@@ -83,9 +83,16 @@
 
 <!-- Attractions text -->
     <div class="row attraction-text pb-5 pt-5">
-      <div class="col-6 offset-3 text-center">
-        <h1 class="attraction">The Attractions</h1>
-        <h3>Included in your admission are 2 mazes, the full size maze and a mini maze for the young.  Also included is a visit to our pumpkin patch, one zombie paintball game, and one haunted hay ride and.....firepits with FREE S'MORES.</h3>
+      <div class="text-center attraction">
+        <h1 >The Attractions</h1>
+        <h3>Included in your admission are 2 mazes, the full size maze and a mini maze for the young and.....firepits with FREE S'MORES.  Also included is a visit to our pumpkin patch and free admission to "The Garden".  Zombie paintball and haunted hay rides are available for an additional fee.</h3>
+      </div>
+      <div class="container">
+        <div class="mt-5 mb-5 row">
+            <div class="col offset-5 garden">
+              <a class="btn2 btn-lg btn-light bg-dark text-light mt-3" href="https://csteid.github.io/event-landing-page/" role="button" target="_blank">The Garden</a>
+            </div>
+        </div>
       </div>
     </div>
 
@@ -228,9 +235,7 @@
   
   <!-- Footer -->
   <footer class="text-center mt-0">
-    <div class="row justify-content-center">
-        <a class="btn2 btn-lg btn-light bg-dark text-light mt-3" href="https://csteid.github.io/event-landing-page/" role="button">Free tickets to The Garden</a>
-      </div>
+    
       <div class="foot">
         <a href="#" class="fa fa-2x fa-facebook"></a>
         <a href="#" class="fa fa-2x fa-twitter p-4"></a>  
